# productory

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  create_db_user.sh  docker-compose.yaml  fixtures.json  manage.py  pyproject.toml  requirements.txt  skills.md
.devcontainer/: devcontainer.json
.github/: labels.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  good_first_issue.yml
.github/workflows/: ci.yml  labels.yml  release.yml
demo/: manage.py
demo/demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/fixtures/: sample_data.json
demo/templates/admin/: base_site.html  color_theme_toggle.html  index.html  login.html
docs/: api-examples.md  branding.md  concepts.md  extension-points.md  productory-ecommerce.erd  productory-ecommerce.mmd  quickstart.md
docs/assets/: README.md
docs/blog/: building-a-django-ecommerce-core-in-300-lines.md
product/: admin.py  fixtures.py  models.py  serialiserz.py  serializers.py  tests.py  urls.py  views.py
product/tests/: test_categories.py  test_combos.py  test_menus.py  test_orders.py  test_products.py  test_promotions.py
productory/: asgi.py  settings.py  urls.py  wsgi.py
src/productory_catalog/: admin.py  apps.py  models.py
src/productory_catalog/api/: serializers.py  urls.py  views.py
src/productory_catalog/migrations/: 0001_initial.py  0002_alter_product_currency.py  0003_alter_product_currency.py
src/productory_checkout/: admin.py  apps.py  models.py  services.py
src/productory_checkout/api/: serializers.py  urls.py  views.py
src/productory_checkout/migrations/: 0001_initial.py  0002_cart_discount_amount_order_discount_amount.py  0003_cart_price_includes_vat_and_more.py  0004_backfill_vat_fields.py  0005_alter_cart_currency_alter_order_currency_and_more.py
src/productory_core/: __init__.py  admin.py  apps.py  audit_context.py  audit_signals.py  conf.py  currency.py  hooks.py  middleware.py  models.py  permissions.py  scopes.py  store.py  validators.py
src/productory_ecommerce/: urls.py
src/productory_promotions/: admin.py  apps.py  models.py  services.py
tests/: conftest.py  factories.py  settings.py  test_api.py  test_audit_trail.py  test_chaos_monkey.py  test_core.py  test_currency_validation.py  test_dashboard_kpis.py  test_hooks.py  test_promotions.py  test_seed_demo_data.py  test_services.py  test_store_pricing.py  urls.py
(+17 files in other folders)
